--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.scrollbar-hide ::-webkit-scrollbar{
+  display: none;
+}
+
+.scrollbar-hide {
+  scrollbar-width: none;
+}
